update: api documentation
